setting margin left to 0 didn't seem to help, i have now set margin and gap to 0. I also turned hamburger align items to flex end, to correct the mistake i made by centering it, masking part of the menu

--- a/style.css
+++ b/style.css
@@ -359,11 +359,11 @@ footer {
     height: 10px;
 }
 
+/*This what will be displayed once menu clicked*/
 .hamburger {
     display: none;
     flex-direction: column;
-    justify-content: center;
-    align-items:center;
+    align-items: flex-end;
     cursor: pointer;
     gap: 5px;
     z-index: 10;
@@ -379,12 +379,13 @@ footer {
 
 @media (max-width: 768px) {
     header {
-        height: 100px;
+        height: 140px;
         display: flex;
         flex-direction: row;
         justify-content: space-between !important;
         align-items: center !important;
-        margin-left: 0 !important;
+        margin: 0 !important;
+        gap: 0 !important;
     }
 
     .topside h1 {
